#479 - Fixed text aligning in openings.

--- a/www/css/up-style.css
+++ b/www/css/up-style.css
@@ -1077,7 +1077,6 @@ ui-collapsible-heading-toggle,li.ui-collapsible h3.ui-collapsible-heading a,ui-c
 	max-width: 600px;
 }
 
-#opening .ui-table td,
 #transport2 .ui-table td {
 	padding-top: 0px;
 	padding-bottom: 0px;
